# ZK-XDR-Graph-Agentless-XDR-ZK-Device-Trust-Federated-CTI-Lakehouse

./: .env.example  .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  docker-build.yml
apps/api-gateway/: go.mod  go.sum
apps/console-web/: next.config.mjs  package-lock.json  package.json
circuits/: Nargo.toml
circuits/src/: attestation_proof.nr  compliance_proof.nr  device_identity.nr  main.nr  trust_score.nr
detections/sigma/: brute_force_t1110.yml  ddos_t1499.yml  dga_t1568.yml  dns_beacon_t1071.yml  phishing_t1566.yml
docker/: Dockerfile.ai  Dockerfile.api  Dockerfile.web  Dockerfile.worker
docs/: ARCHITECTURE.md  CASE_STUDY.md  QUICKSTART.md  openapi.yaml
examples/: demo_e2e.py
examples/attack-scenarios/: generate_demo_events.py  run_demo_attack.py
infra/: docker-compose.local.yml  prometheus.yml
infra/neo4j/: init.cypher
infra/prometheus/: alerts.yml
playbooks/: api_abuse.yml  ddos_mitigation.yml  device_quarantine.yml  dns_response.yml  phishing_response.yml
schemas/: asset.schema.json  cti-indicator.schema.json  incident.schema.json  playbook.schema.json  xdr-event.schema.json  zk-proof.schema.json
scripts/: integration-test.sh  run-full-demo.sh  run-robot-tests.sh  verify-e2e-demo.sh
services/analyst-copilot/: Dockerfile  requirements.txt
services/anomaly-detection/: Dockerfile  Project.toml
services/asset-graph/: Dockerfile  go.mod  go.sum
services/connectors/: go.mod
services/correlation-engine/: Dockerfile  (+2 more)
services/ioc-parsers/: Cargo.toml  Dockerfile
services/ioc-parsers/src/: main.rs  parsers.rs
(+103 files in other folders)
